@@ -8,6 +8,7 @@ envlist =
 deps =
     1.11.x: Django~=1.11.0
     2.0.x: Django~=2.0.0
+    2.1.x: Django~=2.1.0
     master: https://github.com/django/django/archive/master.tar.gz#egg=django
 commands =
     make develop test
